Development Portal (2014-08-19 shi)
==============================
Original icons for themeing
Fixed original.css


Development Portal (2014-08-18 shi)
==============================
Tint mode for themeing
Mustard colourtheme
Fixed original.css


Development Portal (2014-08-13 shi)
==============================
Fixed High Visibility slug link to registry dataset
Fixed {missing_data} to include description
Added translations


Publisher Portal (2014-08-13 shi)
==============================
Added descriptive header titles to include Country and Sector count


Publisher Portal (2014-08-12 shi)
==============================
Added views for country activities, transactions and budgets
Added translations
Fixed header titles for new views


Development Portal (2014-08-12 shi)
==============================
Refactor CSS for themeing
New template CSS for themeing
Refactor SAVi CSS


Development Portal (2014-08-11 shi)
==============================
Added new explanations for "0" and "-"
Translations added
Removed javascript links to footers
Added link to Publisher Portal on index page


Publisher Portal (2014-08-11 shi)
==============================
Added link back to Development Portal on index page
Added translations


Publisher Portal (2014-08-07 shi)
==============================
Added generic chunks for different portals
Stats link "0" disabled
Added new publisher views for sectors and countries
Edit CSS for new tables
Add translations for new views
Fix javascript links
Add new hover text for new views
Fix graphs background and titles for new views
Fixed stats table wrapper for larger numbers


Publisher Portal (2014-08-06 shi)
==============================
Publisher portal individual view
Add translations for publisher portal


Development Portal (2014-08-06 shi)
==============================
Linked "0" and "-" to description footer
Remove links in tables
Adjust padding in table columns
Adding onclicks to table rows for Sector / Donor
Fix High flava tables