@@ -44,7 +44,7 @@
 <tr onclick="window.location.hash='#view=act&aid={aid}';">
 	<td class="num">{num}.</td>
 	<td class="title" title="{project_title_tip_text}">
-		<a href="#view=act&aid={aid}">
+		<a href="#view=act&aid={aid}" class="percent">
 			{title}
 			<span>{reported_by_text}</span>
 		</a>
