@@ -1,7 +1,9 @@
 Development Portal (2014-08-19 shi)
 ==============================
 Original icons for themeing
+Fixed images opacity filters
 Fixed original.css
+Fixed padding for donor/sector activities
 
 
 Development Portal (2014-08-18 shi)
